[gd_scene load_steps=6 format=3 uid="uid://c5sn8mfiou534"]

[ext_resource type="Script" path="res://engine/gui/elements/menu_bar/menu_bar.gd" id="1_eyjsu"]
[ext_resource type="Texture2D" uid="uid://df4n4cnf0fd30" path="res://default/sprites/Team.png" id="2_jdtsv"]
[ext_resource type="Texture2D" uid="uid://b56lnd7iyyi64" path="res://default/sprites/Backpack.png" id="3_7h12r"]
[ext_resource type="Texture2D" uid="uid://birjq8gfdsh4h" path="res://default/sprites/Book.png" id="4_megtj"]
[ext_resource type="Texture2D" uid="uid://ge6xn4o86c0a" path="res://default/sprites/Gear.png" id="5_4de6a"]

[node name="MenuBar" type="HBoxContainer"]
script = ExtResource("1_eyjsu")

[node name="StartFillPanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "BTN_OPTIONS_TOOLTIP"
texture_normal = ExtResource("2_jdtsv")
ignore_texture_size = true
stretch_mode = 5

[node name="InventoryButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "BTN_OPTIONS_TOOLTIP"
texture_normal = ExtResource("3_7h12r")
ignore_texture_size = true
stretch_mode = 5

[node name="JournalButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "BTN_OPTIONS_TOOLTIP"
texture_normal = ExtResource("4_megtj")
ignore_texture_size = true
stretch_mode = 5

[node name="OptionsButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "BTN_OPTIONS_TOOLTIP"
texture_normal = ExtResource("5_4de6a")
ignore_texture_size = true
stretch_mode = 5

[node name="EndFillPanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
